<resources>
    <string name="app_name">SportsInfo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_bottom_navigation">Home</string>
    <string name="leagues_bottom_navigation">Leagues</string>
    <string name="teams_bottom_navigation">Teams</string>
    <string name="players_bottom_navigation">Players</string>
    <string name="sports_bottom_navigation">Sports</string>

    <string name="homescreen_sports_title">Sports</string>
    <string name="homescreen_leagues_title">Leagues</string>
    <string name="homescreen_teams_title">Teams</string>
    <string name="homescreen_players_title">Players</string>
    <string name="homescreen_secondary_title_sports">Discover all sports</string>
    <string name="homescreen_secondary_title_leagues">Discover all leagues</string>
    <string name="homescreen_secondary_title_teams">Discover all teams</string>
    <string name="homescreen_secondary_title_players">Discover all players</string>

    <string name="player_name_title">Name</string>
    <string name="player_nationality">Nationality</string>
    <string name="player_team_title">Team</string>

    <string name="league_title">League</string>
    <string name="team_title">Team</string>
    <string name="btn_see_more">See more</string>

    <string name="see_more">See more</string>
    <string name="sports_description">Description</string>
    <string name="player_details_height">Height</string>
    <string name="players_detail_date_born">Date of birth</string>
    <string name="player_details_birthplace">Birthplace</string>
    <string name="league_details_sport">Sport</string>
    <string name="team_details_name">Team Name</string>
    <string name="league_details_name">League Name</string>
    <string name="league_details_country">Country</string>
    <string name="league_details_year_formed">Year Formed</string>
    <string name="league_details_description">Description</string>
    <string name="search_events">Search</string>
    <string name="all_events">All events</string>
    <string name="tv_events">TV events</string>
    <string name="select_event_type">Select event type:</string>
    <string name="tv_channel">Channel</string>
    <string name="tv_sport">Sport</string>
    <string name="bottom_navigation_events">Events</string>
    <string name="error_message_title">Error</string>
    <string name="error_message_description">A network connection occurred.</string>
    <string name="ok_message">OK</string>
    <string name="loading_view_error">Nothing to see here</string>

</resources>