<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="@dimen/calendar_height"
            app:datePicker="true"
            app:headerColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/txt_radio_button_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:selectionColor="@color/colorAccent"
            app:todayLabelColor="@color/colorAccent" />

        <TextView
            android:id="@+id/txt_radio_button_description"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements_events"
            android:text="@string/select_event_type"
            android:textSize="@dimen/material_design_heading_txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calendar_view" />

        <RadioGroup
            android:id="@+id/radio_btn_group_events"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_between_elements_events"
            android:checkedButton="@+id/radio_btn_tv_events"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_radio_button_description">

            <RadioButton
                android:id="@+id/radio_btn_tv_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_margin_between_elements"
                android:text="@string/tv_events"
                android:textSize="@dimen/material_design_subheading_txt_size" />

            <RadioButton
                android:id="@+id/radio_btn_all_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_margin_between_elements"
                android:text="@string/all_events"
                android:textSize="@dimen/material_design_subheading_txt_size" />
        </RadioGroup>

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_search_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/homescreen_cardview_corner_radius"
            android:layout_marginRight="@dimen/homescreen_cardview_corner_radius"
            android:layout_marginBottom="@dimen/default_margin_between_elements"
            android:text="@string/search_events"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>