<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin_between_elements"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/img_player_details_test"
            android:layout_width="@dimen/img_player_height_width"
            android:layout_height="@dimen/img_player_height_width"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_test_player"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txt_player_details_name_title"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_between_elements"
            android:text="@string/player_name_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/material_design_title_txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_player_details_test"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_player_details_name_body"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_between_elements"
            android:textSize="@dimen/material_design_body_txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_player_details_test"
            app:layout_constraintTop_toBottomOf="@id/txt_player_details_name_title"
            tools:text="Sokratis Papastathopoulos" />

        <TextView
            android:id="@+id/txt_player_details_nationality_title"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_between_elements"
            android:text="@string/player_nationality"
            android:textColor="@android:color/black"
            android:textSize="@dimen/material_design_title_txt_size"
            app:layout_constraintStart_toEndOf="@id/img_player_details_test"
            app:layout_constraintTop_toBottomOf="@id/txt_player_details_name_body" />

        <TextView
            android:id="@+id/txt_player_details_nationality_body"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_between_elements"
            android:textSize="@dimen/material_design_body_txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_player_details_test"
            app:layout_constraintTop_toBottomOf="@id/txt_player_details_nationality_title"
            tools:text="Greek" />

        <TextView
            android:id="@+id/txt_player_details_team_title"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_between_elements"
            android:text="@string/player_team_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/material_design_title_txt_size"
            app:layout_constraintStart_toEndOf="@id/img_player_details_test"
            app:layout_constraintTop_toBottomOf="@id/txt_player_details_nationality_body" />

        <TextView
            android:id="@+id/txt_player_details_team_body"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_between_elements"
            android:textSize="@dimen/material_design_body_txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_player_details_test"
            app:layout_constraintTop_toBottomOf="@id/txt_player_details_team_title"
            tools:text="Arsenal" />

        <TextView
            android:id="@+id/txt_player_details_height_title"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_between_elements"
            android:text="@string/player_details_height"
            android:textColor="@android:color/black"
            android:textSize="@dimen/material_design_title_txt_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_player_details_test" />

        <TextView
            android:id="@+id/txt_player_details_height_body"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_between_elements"
            android:textSize="@dimen/material_design_body_txt_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_player_details_height_title"
            tools:text="1.86" />

        <TextView
            android:id="@+id/txt_player_details_date_born_title"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_between_elements"
            android:text="@string/players_detail_date_born"
            android:textColor="@android:color/black"
            android:textSize="@dimen/material_design_title_txt_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_player_details_height_body" />

        <TextView
            android:id="@+id/txt_player_details_date_born_body"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_between_elements"
            android:textSize="@dimen/material_design_body_txt_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_player_details_date_born_title"
            tools:text="1988-06-09" />

        <TextView
            android:id="@+id/txt_player_details_birthplace_title"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_between_elements"
            android:text="@string/player_details_birthplace"
            android:textColor="@android:color/black"
            android:textSize="@dimen/material_design_title_txt_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_player_details_date_born_body" />

        <TextView
            android:id="@+id/txt_player_details_birthplace_body"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_between_elements"
            android:textSize="@dimen/material_design_body_txt_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_player_details_birthplace_title"
            tools:text="Kalamata, Greece" />

        <TextView
            android:id="@+id/txt_player_details_description_title"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_between_elements"
            android:text="@string/sports_description"
            android:textColor="@android:color/black"
            android:textSize="@dimen/material_design_title_txt_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_player_details_birthplace_body" />

        <TextView
            android:id="@+id/txt_player_details_description_body"
            android:layout_width="@dimen/no_dimens"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_between_elements"
            android:textSize="@dimen/material_design_body_txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_player_details_description_title"
            tools:text="Sokratis Papastathopoulos (Greek: Σωκράτης Παπασταθόπουλος, pronounced ; born 9 June 1988), commonly known by the singular name Sokratis, is a Greek professional footballer who plays as a centre back for Premier League club Arsenal.Sokratis Papastathopoulos (Greek: Σωκράτης Παπασταθόπουλος, pronounced ; born 9 June 1988), commonly known by the singular name Sokratis, is a Greek professional footballer who plays as a centre back for Premier League club Arsenal." />

    </android.support.constraint.ConstraintLayout>
</layout>