<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin_between_elements">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.card.MaterialCardView
                android:id="@+id/cardview_sports"
                android:layout_width="@dimen/no_dimens"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/homescreen_cardview_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="@dimen/no_dimens"
                        android:layout_height="@dimen/homescreen_cardview_height"
                        android:background="@drawable/sports_background_color"
                        android:gravity="center"
                        android:text="@string/homescreen_sports_title"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/homescreen_cardview_title"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="@dimen/homescreen_image_height_width"
                        android:layout_height="@dimen/homescreen_image_height_width"
                        android:layout_margin="@dimen/default_margin_between_elements"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_homescreen_sports" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/default_margin_between_elements"
                        android:text="@string/homescreen_secondary_title_sports"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/homescreen_cardview_secondary_title"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                android:id="@+id/cardview_leagues"
                android:layout_width="@dimen/no_dimens"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_between_elements"
                app:cardCornerRadius="@dimen/homescreen_cardview_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardview_sports">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="@dimen/no_dimens"
                        android:layout_height="@dimen/homescreen_cardview_height"
                        android:background="@drawable/league_background_color"
                        android:gravity="center"
                        android:text="@string/homescreen_leagues_title"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/homescreen_cardview_title"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="@dimen/homescreen_image_height_width"
                        android:layout_height="@dimen/homescreen_image_height_width"
                        android:layout_margin="@dimen/default_margin_between_elements"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_homescreen_league" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/default_margin_between_elements"
                        android:text="@string/homescreen_secondary_title_leagues"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/homescreen_cardview_secondary_title"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                android:id="@+id/cardview_teams"
                android:layout_width="@dimen/no_dimens"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_between_elements"
                app:cardCornerRadius="@dimen/homescreen_cardview_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardview_leagues">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="@dimen/no_dimens"
                        android:layout_height="@dimen/homescreen_cardview_height"
                        android:background="@drawable/team_background_color"
                        android:gravity="center"
                        android:text="@string/homescreen_teams_title"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/homescreen_cardview_title"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="@dimen/homescreen_image_height_width"
                        android:layout_height="@dimen/homescreen_image_height_width"
                        android:layout_margin="@dimen/default_margin_between_elements"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_homescreen_teams" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/default_margin_between_elements"
                        android:text="@string/homescreen_secondary_title_teams"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/homescreen_cardview_secondary_title"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                android:id="@+id/cardview_players"
                android:layout_width="@dimen/no_dimens"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_between_elements"
                app:cardCornerRadius="@dimen/homescreen_cardview_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardview_teams">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="@dimen/no_dimens"
                        android:layout_height="@dimen/homescreen_cardview_height"
                        android:background="@drawable/players_background_color"
                        android:gravity="center"
                        android:text="@string/homescreen_players_title"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/homescreen_cardview_title"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="@dimen/homescreen_image_height_width"
                        android:layout_height="@dimen/homescreen_image_height_width"
                        android:layout_margin="@dimen/default_margin_between_elements"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_homescreen_player" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/default_margin_between_elements"
                        android:text="@string/homescreen_secondary_title_players"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/homescreen_cardview_secondary_title"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.design.card.MaterialCardView>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>